k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetrahedron-backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: tetrahedron-backend
  template:
    metadata:
      labels:
        app: tetrahedron-backend
      annotations:
        redeploy: "$(date +%s)"
    spec:
      containers:
        - name: tetrahedron-backend
          image: chespirana/tetrahedron-backend:latest
          ports:
            - containerPort: 8080
