k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetrahedron-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: tetrahedron-frontend
  template:
    metadata:
      labels:
        app: tetrahedron-frontend
      annotations:
        redeploy: "$(date +%s)"
    spec:
      containers:
        - name: tetrahedron-frontend
          image: chespirana/tetrahedron-frontend:latest
          ports:
            - containerPort: 80
