k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetrahedron-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000,http://ae548371bb1254868840fa2c69e0e26c-139420865.us-west-2.elb.amazonaws.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ae548371bb1254868840fa2c69e0e26c-139420865.us-west-2.elb.amazonaws.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tetrahedron-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetrahedron-frontend
                port:
                  number: 80
